# vmec_utils

./: .gitignore  Makefile  README.md  __init__.py  commands.py  fn.py  meson.build  plot.py  profile.html  profile.json  pyproject.toml
booz/: __init__.py  booz.py  class_booz.py
helper/src/: vmec_helper.f90
test/: test_booz.py  test_temp.py  test_vmec.py
vmec/: __init__.py  class_vmec.py  class_vmec_sadig.py  vmec_math.py
vmec_utils/: __init__.py  class_booz.py  class_vmec.py  commands.py  fft_utils.py  fn.py  mercier.py  plot.py  utils.py
vmec_utils/helper/: __init__.py
vmec_utils/helper/src/: vmec_helper.f90
